--- a/src/A2/UserBundle/Resources/views/layout.html.twig
+++ b/src/A2/UserBundle/Resources/views/layout.html.twig
@@ -1,14 +1,8 @@
-{# On étend notre layout #}
-{% extends "CoreBundle::layout.html.twig" %}
+{# On étend notre layout de base #}
+{% extends "::base.html.twig" %}
 
 {# Dans notre layout il faut définir le block body #}
 {% block body %}
-    <div id="id" class="jumbotron">
-        <h1>Supercar Application</h1>
-        <p>
-            Projet par HADJI Mohamed Allam.
-        </p>
-    </div>
 
     {# On affiche les messages flash que définissent les contrôleurs du bundle #}
     {% for key, messages in app.session.flashbag.all() %}
