--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,8 @@
         {% endblock %}
     </head>
     <body>
+        {% block menu %}
+        {% endblock %}
         <div class="container">
             <div id="content">
                 {% block body %}
