--- a/src/A2/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/A2/UserBundle/Resources/views/Security/login.html.twig
@@ -2,55 +2,58 @@
 
 {% block fos_user_content %}
 
-    <div id="id" class="jumbotron">
-        <h1>Supercar Application</h1>
-        <p>
-            Projet par HADJI Mohamed Allam.
-        </p>
-    </div>
+    <h2>Supercar Application</h2>
+    <p>
+        Projet par HADJI Mohamed Allam.
+    </p>
 
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <div class="row">
-        <div class="col-md-8">
-            <form action="{{ path("fos_user_security_check") }}" method="post" class="form_horizontal">
-                <fieldset>
-                    <legend>Authentification</legend>
+    <div class="container">
+        <div id="loginbox" style="margin-top: 50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <div class="panel-title">Authentification</div>
+                    <div style="float: right; font-size: 80%; position: relative; top: -10px"><a href="#">Mot de passe oublié ?</a></div>
+                </div>
 
-                    {% if csrf_token %}
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                    {% endif %}
+                <div style="padding-top: 30px" class="panel-body">
+                    <div style="display: none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+                    <form id="login-form" class="form-horizontal" role="form" action="{{ path("fos_user_security_check") }}" method="post">
 
-                    <div class="form-group">
-                        <label for="username" class="col-md-12 control-label">Nom d'utilisateur</label>
-                        <div class="col-md-6">
-                            <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control input-md" required="required" />
+                        {% if csrf_token %}
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                        {% endif %}
+
+                        <div style="margin-bottom: 25px" class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" placeholder="Nom d'utilisateur" required="required">
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="password" class="col-md-12 control-label">Mot de passe</label>
-                        <div class="col-md-6">
-                            <input type="password" id="password" name="_password" class="form-control input-md" required="required" />
+                        <div style="margin-bottom: 25px" class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <input type="password" class="form-control" id="password" name="_password" placeholder="Mot de passe" required="required">
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="remember_me" class="col-md-12 control-label checkbox"></label>
-                        <div class="col-md-6">
-                            <label class="checkbox"><input type="checkbox" id="remember_me" name="_remember_me" value="on"/>Se souvenir de moi</label>
+                        <div class="inout-group">
+                            <div class="checkbox">
+                                <label>
+                                    <input id="remember_me" name="_remember_me" type="checkbox" value="1"> Se souvenir de moi
+                                </label>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input type="submit" id="_submit" name="_submit" value="Connexion" class="btn btn-primary"/>
+                        <div style="margin-top: 10px" class="form-group">
+                            <div class="col-sm-12 controls">
+                                <input type="submit" id="btn-login" name="_submit" value="Connexion" class="btn btn-success" />
+                            </div>
                         </div>
-                    </div>
-                </fieldset>
-            </form>
+
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock fos_user_content %}
