Ajout du lien vers l'onglet Category

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -35,7 +35,7 @@
                             <a href="#"><i class="fa fa-gift fa-lg"></i> Voitures <span class="arrow"></span></a>
                         </li>
                         <ul class="sub-menu collapse" id="voitures">
-                            <li><a href="#">Catégories</a></li>
+                            <li><a href="{{ path('a2_category_index') }}">Catégories</a></li>
                             <li><a href="#">Marques</a></li>
                             <li><a href="#">Modèles</a></li>
                             <li><a href="#">Voitures</a></li>
