--- a/src/A2/CategoryBundle/Resources/views/Category/index.html.twig
+++ b/src/A2/CategoryBundle/Resources/views/Category/index.html.twig
@@ -19,7 +19,7 @@
         <tbody>
         {% for category in categories %}
             <tr>
-                <td><a href="{{ path('category_show', { 'id': category.id }) }}">{{ category.id }}</a></td>
+                <td><a href="{{ path('a2_category_show', { 'id': category.id }) }}">{{ category.id }}</a></td>
                 <td>{{ category.name }}</td>
                 <td>{{ category.adminAdd }}</td>
                 <td>{% if category.dateAdd %}{{ category.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
@@ -29,10 +29,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('category_show', { 'id': category.id }) }}">show</a>
+                            <a href="{{ path('a2_category_show', { 'id': category.id }) }}">show</a>
                         </li>
                         <li>
-                            <a href="{{ path('category_edit', { 'id': category.id }) }}">edit</a>
+                            <a href="{{ path('a2_category_edit', { 'id': category.id }) }}">edit</a>
                         </li>
                     </ul>
                 </td>
@@ -43,7 +43,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('category_new') }}">Create a new category</a>
+            <a href="{{ path('a2_category_new') }}">Create a new category</a>
         </li>
     </ul>
 {% endblock %}
