--- a/src/A2/CategoryBundle/Resources/views/Category/new.html.twig
+++ b/src/A2/CategoryBundle/Resources/views/Category/new.html.twig
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('category_index') }}">Back to the list</a>
+            <a href="{{ path('a2_category_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
