--- a/src/A2/CategoryBundle/Resources/views/Category/show.html.twig
+++ b/src/A2/CategoryBundle/Resources/views/Category/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Adminadd</th>
-                <td>{{ category.adminAdd }}</td>
+                <td>{{ nameAdminAdd }}</td>
             </tr>
             <tr>
                 <th>Dateadd</th>
@@ -38,15 +38,10 @@
 
     <ul>
         <li>
-            <a href="{{ path('category_index') }}">Back to the list</a>
+            <a href="{{ path('a2_category_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('category_edit', { 'id': category.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
+            <a href="{{ path('a2_category_edit', { 'id': category.id }) }}">Edit</a>
         </li>
     </ul>
 {% endblock %}
