Reorganisation de la page d'authentification

--- a/src/A2/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/A2/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends "A2UserBundle::layout.html.twig" %}
 
-{% block content %}
+{% block fos_user_content %}
 
     <div class="well-block">
         <div class="well-title">
