--- a/src/A2/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/A2/UserBundle/Resources/views/Security/login.html.twig
@@ -57,4 +57,12 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <hr>
+
+        <footer>
+            <p>Supercar Application © {{ 'now'|date('Y') }}.</p>
+        </footer>
+    </div>
 {% endblock body %}
