--- a/src/A2/CategoryBundle/Resources/views/Category/show.html.twig
+++ b/src/A2/CategoryBundle/Resources/views/Category/show.html.twig
@@ -1,47 +1,53 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CategoryBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Category</h1>
+{% block category_content %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ category.name }}</td>
-            </tr>
-            <tr>
-                <th>Adminadd</th>
-                <td>{{ nameAdminAdd }}</td>
-            </tr>
-            <tr>
-                <th>Dateadd</th>
-                <td>{% if category.dateAdd %}{{ category.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Userupdate</th>
-                <td>{{ category.userUpdate }}</td>
-            </tr>
-            <tr>
-                <th>Dateupdate</th>
-                <td>{% if category.dateUpdate %}{{ category.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Isactive</th>
-                <td>{% if category.isActive %}Yes{% else %}No{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Détails de la catégorie</h2>
 
-    <ul>
-        <li>
-            <a href="{{ path('a2_category_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('a2_category_edit', { 'id': category.id }) }}">Edit</a>
-        </li>
-    </ul>
-{% endblock %}
+    <div>
+        <hr/>
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                {{ category.name }}
+            </dd>
+
+            <dt>
+                Administateur d'ajout
+            </dt>
+            <dd>
+                {{ nameAdminAdd }}
+            </dd>
+
+            <dt>
+                Date d'ajout
+            </dt>
+            <dd>
+                {{ category.dateAdd|date("d/m/Y h:m:s") }}
+            </dd>
+
+            {% if category.userUpdate is not null %}
+                <dt>
+                    Administateur de mise à jour
+                </dt>
+                <dd>
+                    {{ category.userUpdate }}
+                </dd>
+
+                <dt>
+                    Date de mise à jour
+                </dt>
+                <dd>
+                    {{ category.dateUpdate|date("d/m/Y h:m:s") }}
+                </dd>
+            {% endif %}
+        </dl>
+    </div>
+    <p>
+        <a href="{{ path('a2_category_index') }}">Retour à la liste</a> |
+        <a href="{{ path('a2_category_edit', { 'id': category.id }) }}">Modifier</a>
+    </p>
+
+{% endblock category_content %}
