--- a/src/A2/ModelBundle/Resources/views/Model/index.html.twig
+++ b/src/A2/ModelBundle/Resources/views/Model/index.html.twig
@@ -1,51 +1,46 @@
-{% extends 'base.html.twig' %}
+{% extends "A2ModelBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Models list</h1>
+{% block model_content %}
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Alertvalue</th>
-                <th>Adminadd</th>
-                <th>Dateadd</th>
-                <th>Userupdate</th>
-                <th>Dateupdate</th>
-                <th>Isactive</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <h2>Liste des Modèles</h2>
+    <p><a href="{{ path('a2_model_new') }}">Créer un nouveau modèle</a></p>
+
+    {{ form_start(form) }}
+    {{ form_errors(form) }}
+    <table align="right">
+        <tr>
+            <td>Rechercher un modèle</td>
+            <td>{{ form_widget(form.searchString, {'attr': {'class': 'form-control'}}) }}</td>
+            <td><input type="submit" value="Rechercher" class="btn btn-default"></td>
+        </tr>
+    </table>
+    {{ form_end(form) }}
+
+    <table class="table">
+        <tr>
+            <th>
+                Nom
+            </th>
+            <th>
+                Marque associée
+            </th>
+        </tr>
+
         {% for model in models %}
             <tr>
-                <td><a href="{{ path('model_show', { 'id': model.id }) }}">{{ model.id }}</a></td>
-                <td>{{ model.name }}</td>
-                <td>{{ model.alertValue }}</td>
-                <td>{{ model.adminAdd }}</td>
-                <td>{% if model.dateAdd %}{{ model.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ model.userUpdate }}</td>
-                <td>{% if model.dateUpdate %}{{ model.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if model.isActive %}Yes{% else %}No{% endif %}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('model_show', { 'id': model.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('model_edit', { 'id': model.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    {{ model.name }}
+                </td>
+                <td>
+                    {{ model.brand.name }}
+                </td>
+                <td>
+                    <a href="{{ path('a2_model_show', { 'id': model.id }) }}">Détails</a> |
+                    <a href="{{ path('a2_model_edit', { 'id': model.id }) }}">Modifier</a> |
+                    <a href="{{ path('a2_model_delete', { 'id': model.id }) }}">Supprimer</a>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('model_new') }}">Create a new model</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock model_content %}
