Ajout du lien vers les modeles dans le menu principal

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -38,7 +38,7 @@
                             <ul class="sub-menu collapse" id="voitures">
                                 <li><a href="{{ path('a2_category_index') }}">Catégories</a></li>
                                 <li><a href="{{ path('a2_brand_index') }}">Marques</a></li>
-                                <li><a href="#">Modèles</a></li>
+                                <li><a href="{{ path('a2_model_index') }}">Modèles</a></li>
                                 <li><a href="#">Voitures</a></li>
                             </ul>
 
