--- a/src/A2/ModelBundle/Resources/views/Model/new.html.twig
+++ b/src/A2/ModelBundle/Resources/views/Model/new.html.twig
@@ -1,16 +1,44 @@
-{% extends 'base.html.twig' %}
+{% extends "A2ModelBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Model creation</h1>
+{% block model_content %}
+
+    <h2>Ajout d'un nouveau modèle</h2>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+
+    {{ form_errors(form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.brand, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.brand) }}
+            <div class="col-md-4">
+                {{ form_widget(form.brand, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.alertValue, "Valeur d'alerte", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.alertValue) }}
+            <div class="col-md-4">
+                {{ form_widget(form.alertValue, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Créer" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_model_index') }}">Retour à la liste</a></p>
+
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('model_index') }}">Back to the list</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock model_content %}
