--- a/src/A2/ModelBundle/Resources/views/Model/show.html.twig
+++ b/src/A2/ModelBundle/Resources/views/Model/show.html.twig
@@ -1,56 +1,60 @@
-{% extends 'base.html.twig' %}
+{% extends "A2ModelBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Model</h1>
+{% block model_content %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ model.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ model.name }}</td>
-            </tr>
-            <tr>
-                <th>Alertvalue</th>
-                <td>{{ model.alertValue }}</td>
-            </tr>
-            <tr>
-                <th>Adminadd</th>
-                <td>{{ model.adminAdd }}</td>
-            </tr>
-            <tr>
-                <th>Dateadd</th>
-                <td>{% if model.dateAdd %}{{ model.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Userupdate</th>
-                <td>{{ model.userUpdate }}</td>
-            </tr>
-            <tr>
-                <th>Dateupdate</th>
-                <td>{% if model.dateUpdate %}{{ model.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Isactive</th>
-                <td>{% if model.isActive %}Yes{% else %}No{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Détails du modèle</h2>
 
-    <ul>
-        <li>
-            <a href="{{ path('model_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('model_edit', { 'id': model.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+    <div>
+        <hr/>
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                {{ model.name }}
+            </dd>
+
+            <dt>
+                Marque
+            </dt>
+            <dd>
+                {{ model.brand.name }}
+            </dd>
+
+            <dt>
+                Administateur d'ajout
+            </dt>
+            <dd>
+                {{ nameAdminAdd }}
+            </dd>
+
+            <dt>
+                Date d'ajout
+            </dt>
+            <dd>
+                {{ model.dateAdd|date("d/m/Y h:m:s") }}
+            </dd>
+
+            {% if model.userUpdate is not null %}
+                <dt>
+                    Administateur de mise à jour
+                </dt>
+                <dd>
+                    {{ nameUserUpdate }}
+                </dd>
+
+                <dt>
+                    Date de mise à jour
+                </dt>
+                <dd>
+                    {{ model.dateUpdate|date("d/m/Y h:m:s") }}
+                </dd>
+            {% endif %}
+        </dl>
+    </div>
+    <p>
+        <a href="{{ path('a2_model_index') }}">Retour à la liste</a> |
+        <a href="{{ path('a2_model_edit', { 'id': model.id }) }}">Modifier</a>
+    </p>
+
+{% endblock model_content %}
