--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -37,7 +37,7 @@
                             </li>
                             <ul class="sub-menu collapse" id="voitures">
                                 <li><a href="{{ path('a2_category_index') }}">Catégories</a></li>
-                                <li><a href="{{ path('a2_brand_idex') }}">Marques</a></li>
+                                <li><a href="{{ path('a2_brand_index') }}">Marques</a></li>
                                 <li><a href="#">Modèles</a></li>
                                 <li><a href="#">Voitures</a></li>
                             </ul>
