--- a/src/A2/CategoryBundle/Resources/views/Category/show.html.twig
+++ b/src/A2/CategoryBundle/Resources/views/Category/show.html.twig
@@ -33,7 +33,7 @@
                     Administateur de mise à jour
                 </dt>
                 <dd>
-                    {{ category.userUpdate }}
+                    {{ nameUserUpdate }}
                 </dd>
 
                 <dt>
