--- a/src/A2/BrandBundle/Resources/views/Brand/show.html.twig
+++ b/src/A2/BrandBundle/Resources/views/Brand/show.html.twig
@@ -33,7 +33,7 @@
                     Administateur de mise à jour
                 </dt>
                 <dd>
-                    {{ brand.userUpdate }}
+                    {{ nameUserUpdate }}
                 </dd>
 
                 <dt>
