Rectification mineur apres des test qui ont donne des erreurs

--- a/src/A2/BrandBundle/Resources/views/Brand/delete.html.twig
+++ b/src/A2/BrandBundle/Resources/views/Brand/delete.html.twig
@@ -13,7 +13,7 @@
                 Nom
             </dt>
             <dd>
-                {{ brande.name }}
+                {{ brand.name }}
             </dd>
 
             <dt>
