Creation de la vue de listage des devises

--- a/src/A2/CurrencyBundle/Resources/views/Currency/index.html.twig
+++ b/src/A2/CurrencyBundle/Resources/views/Currency/index.html.twig
@@ -1,51 +1,46 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CurrencyBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Currencies list</h1>
+{% block currency_content %}
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Symbol</th>
-                <th>Adminadd</th>
-                <th>Dateadd</th>
-                <th>Userupdate</th>
-                <th>Dateupdate</th>
-                <th>Isactive</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <h2>Liste des Devises</h2>
+    <p><a href="{{ path('a2_currency_new') }}">Créer une nouvelle devise</a></p>
+
+    {{ form_start(form) }}
+    {{ form_errors(form) }}
+    <table align="right">
+        <tr>
+            <td>Rechercher un modèle</td>
+            <td>{{ form_widget(form.searchString, {'attr': {'class': 'form-control'}}) }}</td>
+            <td><input type="submit" value="Rechercher" class="btn btn-default"></td>
+        </tr>
+    </table>
+    {{ form_end(form) }}
+
+    <table class="table">
+        <tr>
+            <th>
+                Nom
+            </th>
+            <th>
+                Symobole
+            </th>
+        </tr>
+
         {% for currency in currencies %}
             <tr>
-                <td><a href="{{ path('currency_show', { 'id': currency.id }) }}">{{ currency.id }}</a></td>
-                <td>{{ currency.name }}</td>
-                <td>{{ currency.symbol }}</td>
-                <td>{{ currency.adminAdd }}</td>
-                <td>{% if currency.dateAdd %}{{ currency.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ currency.userUpdate }}</td>
-                <td>{% if currency.dateUpdate %}{{ currency.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if currency.isActive %}Yes{% else %}No{% endif %}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('currency_show', { 'id': currency.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('currency_edit', { 'id': currency.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    {{ currency.name }}
+                </td>
+                <td>
+                    {{ currency.symbol }}
+                </td>
+                <td>
+                    <a href="{{ path('a2_currency_show', { 'id': currency.id }) }}">Détails</a> |
+                    <a href="{{ path('a2_currency_edit', { 'id': currency.id }) }}">Modifier</a> |
+                    <a href="{{ path('a2_currency_delete', { 'id': currency.id }) }}">Supprimer</a>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('currency_new') }}">Create a new currency</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock currency_content %}
