Ajout du lien vers les devises dans le menu principal

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -84,7 +84,7 @@
                             </li>
                             <ul class="sub-menu collapse" id="parametres">
                                 <li><a href="#">Valeurs par défaut</a></li>
-                                <li><a href="#">Devises</a></li>
+                                <li><a href="{{ path('a2_currency_index') }}">Devises</a></li>
                             </ul>
 
 
